syntax = "proto3";

package recommender;

option go_package = "./internal/proto/api"; 


service RecommenderService {
    rpc GetModules(GetModulesRequest) returns (GetModulesResponse) {}
}

message GetModulesRequest {
    string user_id = 1;
}

message GetModulesResponse {
    repeated Module modules = 2;
}

message Module {
    string name = 1;
    repeated Movie movies = 2;
}

message Movie {
    uint32 id = 1;
    string title = 2;
    string img_url = 3;
}

